--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,10 +29,7 @@ add_link_options(-Wl,--print-memory-usage)
 
 add_executable(${PROJECT_NAME} src/main.cpp)
 
-#### Uncomment this to see flashing process details
-#set(FLASH_VERBOSE_FLAG "-v")
-
 add_custom_target(FLASH
-        ${AVR_DUDE_EXECUTABLE} -p ${TARGET_CPU} -c wiring -b115200 -P ${AVR_DUDE_PORT} ${FLASH_VERBOSE_FLAG} -F -D -U flash:w:${PROJECT_BINARY_DIR}/${PROJECT_NAME}:a
+        ${AVR_DUDE_EXECUTABLE} -p ${TARGET_CPU} -c wiring -b115200 -P ${AVR_DUDE_PORT} -v -F -D -U flash:w:${PROJECT_BINARY_DIR}/${PROJECT_NAME}:a
         DEPENDS ${PROJECT_NAME}
         COMMENT "Flash to ${TARGET_CPU}")
